--- a/index.html
+++ b/index.html
@@ -8,24 +8,26 @@
 </head>
 <body>
     <header class="topo"> 
-<div class="header-1">
-            <div class="logo">
+      <div class="header-1">
+    <div class="logo">
                 <img src="./assets/self.png">
-            </div>
-            <div class="sociais">
+    </div>
+       <div class="sociais" >
                 <ul>
-                    <li><a href=""><img src="./assets/busca.png"></a> </li>
+            <li><a href=""><img src="./assets/busca.png"></a> </li>
                     <li><a href=""><img src="./assets/carrinho.png"></a></li>
                     <li><a href=""><img src="./assets/user.png"></a></li>
                 </ul>
             </div>
-
         </div>
-
+        <div class="banner">
+            <img src="./assets/banner.png">
+        </div>
 </header>
-     
-<div class="banner">
-    <img src="./assets/banner.png">
+
+<div class="column">
+   <p>PROMOÇÃO</p>
+
 </div>
     
 </body>
