--- a/index.html
+++ b/index.html
@@ -29,6 +29,23 @@
    <p>PROMOÇÃO</p>
 
 </div>
+    <div class="col-100">
+        <div class="col-3 bloco-texto">
+            <img src="./assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.png" />
+            <h3><b>Chá verde</b></h3>
+            <b>R$:</b><a style="color:green;" style="font-family: Arial">50,00</a>
+        </div>
+        <div class="col-3 bloco-texto">
+            <img src="./assets/devin-avery-bMH8ub9z1_U-unsplash.png" />
+            <h3><b>Vitality ahot</b></h3>
+            <b>R$:</b><a style="color:green;" style="font-family: Arial">50,00</a>
+        </div>
+        <div class="col-3 bloco-texto">
+            <img src="./assets/devin-avery-BRVqq2uak4E-unsplash.png" />
+            <h3><b>Salgados</b> Variados</h3>
+            <b>R$:</b><a style="color:green;" style="font-family: Arial">50,00</a>
+        </div>
+</div>
     
 </body>
 </html>
