--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             </div>
         </div>
         <div class="banner">
-            <img src="./assets/banner.png">
+            <img class="banner-img" src="./assets/banner.png">
         </div>
 </header>
 
@@ -29,7 +29,7 @@
    <p>PROMOÇÃO</p>
 
 </div>
-    <div class="col-100">
+<div class="col-100">
         <div class="col-3 bloco-texto">
             <img src="./assets/gabrielle-henderson-1DMNn6gBbwQ-unsplash.png" />
             <h3><b>Chá verde</b></h3>
