--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="./css/main.css">
-    <title>Document</title>
+    <title>Self Care</title>
 </head>
 <body>
     <header class="topo"> 
@@ -26,7 +26,7 @@
 </header>
 
 <div class="column">
-   <p>PROMOÇÃO</p>
+   <p style="font-weight: bold; font-size: 18px; font-family: 'Courier New', Courier, monospace;">PROMOÇÃO</p>
 
 </div>
 <div class="col-100">
